# comicReader

./: .gitignore  CMakeLists.txt
include/comicReader/: book.hpp  error.hpp  tools.hpp
src/: book.cpp  main.cpp  tools.cpp
